--- a/2-Classification/src/logistic_regression_part_1.ipynb
+++ b/2-Classification/src/logistic_regression_part_1.ipynb
@@ -61,11 +61,11 @@
     "\n",
     "    for i in range(1):\n",
     "\n",
-    "        X = X[i, np.newaxis] \n",
+    "        Xi = X[i, np.newaxis] \n",
     "        \n",
-    "        y_hat = X.dot(W.T)\n",
+    "        y_hat = Xi.dot(W.T)\n",
     "        \n",
-    "        dJCE = (y_ohe[i] - y_hat).T.dot(X)\n",
+    "        dJCE = (y_ohe[i] - y_hat).T.dot(Xi)\n",
     "        \n",
     "        W = W - STEP*dJCE\n",
     "        \n",
