--- a/2-Classification/src/logistic_regression_part_1.ipynb
+++ b/2-Classification/src/logistic_regression_part_1.ipynb
@@ -2,18 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/toffanetto/.local/lib/python3.10/site-packages/matplotlib/projections/__init__.py:63: UserWarning: Unable to import Axes3D. This may be due to multiple versions of Matplotlib being installed (e.g. as a system package and as a pip package). As a result, the 3D projection is not available.\n",
+      "  warnings.warn(\"Unable to import Axes3D. This may be due to multiple versions of \"\n"
+     ]
+    }
+   ],
    "source": [
     "# @toffanetto\n",
     "import numpy as np\n",
-    "import classification as cl"
+    "import classification as cl\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,98 +36,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Training\n",
+    "\n",
+    "W, RMSE_sample, hit, not_hit = cl.trainClassifier(X=X_train,y=y_train,batch=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_train.shape = (7352, 561)\n",
-      "W.shape = (6, 561)\n",
-      "1.8954789143001964\n",
-      "[[0.00679244 0.0084081  0.00150873 ... 0.0031358  0.00980577 0.00430488]\n",
-      " [0.00729445 0.00891055 0.00277325 ... 0.00900694 0.0089297  0.00400647]\n",
-      " [0.00563618 0.00063189 0.00857956 ... 0.00212864 0.00078188 0.00841971]\n",
-      " [0.00662805 0.00711535 0.00685627 ... 0.00863918 0.00020697 0.00218605]\n",
-      " [0.00855543 0.0041532  0.00926085 ... 0.00572031 0.00235689 0.00055114]\n",
-      " [0.00064312 0.00643205 0.00941392 ... 0.00802712 0.00052513 0.00601173]]\n"
+      "Confusion Matrix: \n",
+      "[[492.   0.   4.   0.   0.   0.]\n",
+      " [  8. 461.   2.   0.   0.   0.]\n",
+      " [ 33.  52. 335.   0.   0.   0.]\n",
+      " [  0.   3.   0. 487.   0.   1.]\n",
+      " [  1.   2.   0. 268. 261.   0.]\n",
+      " [  0.   0.   0.   0.   0. 537.]]\n"
      ]
     }
    ],
    "source": [
-    "NUMBER_OF_CLASSES = 6\n",
-    "NUMBER_OF_ATRIBUTES = 561\n",
+    "# Testing\n",
     "\n",
-    "STEP = 0.005\n",
+    "y_test_hat, class_y_hat = cl.classify(x=X_test,W=W)\n",
     "\n",
-    "def trainClassifier(X, y):\n",
-    "    W = np.random.rand(NUMBER_OF_CLASSES, NUMBER_OF_ATRIBUTES)/100 # Rand values in the interval (0, 0,01)\n",
+    "# for i in range(len(y_test)):\n",
+    "#     print('| '+str(y_test[i])+' -> '+str(class_y_hat[i]))\n",
     "\n",
-    "    y_ohe = cl.oneHotEncoding(y=y)\n",
+    "confusion_matrix, hit_rate, not_hit_rate = cl.rateModel(y=y_test,y_hat=class_y_hat)\n",
     "\n",
-    "    print('x_train.shape = '+str(X.shape))\n",
-    "    print('W.shape = '+str(W.shape))\n",
-    "\n",
-    "    for i in range(1):\n",
-    "\n",
-    "        Xi = X[i, np.newaxis] \n",
-    "        \n",
-    "        y_hat = Xi.dot(W.T)\n",
-    "        \n",
-    "        dJCE = (y_ohe[i] - y_hat).T.dot(Xi)\n",
-    "        \n",
-    "        W = W - STEP*dJCE\n",
-    "        \n",
-    "        print(np.mean(y_ohe[i] - y_hat))\n",
-    "        \n",
-    "    print(W)\n",
-    "    \n",
-    "    return W\n",
-    "    \n",
-    "W = trainClassifier(X=X_train,y=y_train)\n",
-    "\n",
-    "# Training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(561,)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(6,)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_hat.T.shape"
+    "print('Confusion Matrix: \\n'+str(confusion_matrix))\n"
    ]
   }
  ],
