--- a/2-Classification/src/logistic_regression_part_1.ipynb
+++ b/2-Classification/src/logistic_regression_part_1.ipynb
@@ -36,6 +36,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting classes balancing\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
