--- a/2-Classification/docs/IA048-Atividade_Classificacao-Gabriel_Toffanetto/corpo.tex
+++ b/2-Classification/docs/IA048-Atividade_Classificacao-Gabriel_Toffanetto/corpo.tex
@@ -1,3 +1,114 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{}
+
+\section{Classificação via Regressão Logística}
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Dados tratados}
+
+\subsubsection{Estrutura de treinamento}
+
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}{0.49\textwidth}
+		\includegraphics[width=\linewidth]{img/0-005/CE_by_epoch-Batch-300}
+		\caption{Entropia cruzada para o treinamento em batelada.}
+		\label{fig:cebyepoch-batch-300}
+	\end{subfigure}
+	\begin{subfigure}{0.49\textwidth}
+	\includegraphics[width=\linewidth]{img/0-005/CE_by_epoch-Step-200}
+	\caption{Entropia cruzada para o treinamento passo-a-passo.}
+	\label{fig:cebyepoch-Step-200}
+	\end{subfigure}
+	\caption{Comportamento da entropia cruzada de treinamento e de validação \textit{holdout} do classificador durante as épocas de treinamento para $\eta = 0,005$.. }
+\end{figure}
+
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}{0.49\textwidth}
+		\includegraphics[width=\linewidth]{img/0-005/Accuracy_by_epoch-Batch-300}
+		\caption{Acurácia para o treinamento em batelada.}
+		\label{fig:Accuracy_by_epoch-batch-300}
+	\end{subfigure}
+	\begin{subfigure}{0.49\textwidth}
+		\includegraphics[width=\linewidth]{img/0-005/Accuracy_by_epoch-Step-200}
+		\caption{Acurácia para o treinamento passo a passo.}
+		\label{fig:Accuracy_by_epoch-Step-200}
+	\end{subfigure}
+	\caption{Comportamento da acurácia de treinamento e de validação \textit{holdout} do classificador durante as épocas de treinamento para $\eta = 0,005$. }
+\end{figure}
+
+
+\subsubsection{Passo de evolução}
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}{0.49\textwidth}
+		\includegraphics[width=\linewidth]{img/0-05/CE_by_epoch-Batch-300}
+		\caption{Entropia cruzada para o treinamento em batelada.}
+		\label{fig:cebyepoch-batch-300-0-05}
+	\end{subfigure}
+	\begin{subfigure}{0.49\textwidth}
+		\includegraphics[width=\linewidth]{img/0-05/CE_by_epoch-Step-200}
+		\caption{Entropia cruzada para o treinamento passo-a-passo.}
+		\label{fig:cebyepoch-Step-200-0-05}
+	\end{subfigure}
+	\caption{Comportamento da entropia cruzada de treinamento e de validação \textit{holdout} do classificador durante as épocas de treinamento para $\eta = 0,05$.}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}{0.49\textwidth}
+		\includegraphics[width=\linewidth]{img/0-05/Accuracy_by_epoch-Batch-300}
+		\caption{Acurácia para o treinamento em batelada.}
+		\label{fig:Accuracy_by_epoch-batch-300-0-05}
+	\end{subfigure}
+	\begin{subfigure}{0.49\textwidth}
+		\includegraphics[width=\linewidth]{img/0-05/Accuracy_by_epoch-Step-200}
+		\caption{Acurácia para o treinamento passo a passo.}
+		\label{fig:Accuracy_by_epoch-Step-200-0-05}
+	\end{subfigure}
+	\caption{Comportamento da acurácia de treinamento e de validação \textit{holdout} do classificador durante as épocas de treinamento para $\eta = 0,05$. }
+\end{figure}
+
+
+\subsubsection{Classificador ótimo}
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Dados brutos}
+
+
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Classificação via \textit{k neareast neighbours}}
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Dados tratados}
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Dados brutos}
+
+
+
+
 
