--- a/2-Classification/docs/IA048-Atividade_Classificacao-Gabriel_Toffanetto/corpo.tex
+++ b/2-Classification/docs/IA048-Atividade_Classificacao-Gabriel_Toffanetto/corpo.tex
@@ -81,21 +81,36 @@ O critério de classificação pode se basear puramente na classe majoritária e
 
 Para implementação do algoritmo de \textit{k}NN, foi escolhido a utilização da distância euclidiana no espaço dos atributos, e a decisão do rótulo vencedor por meio do voto majoritário dos $k$ vizinhos mais próximos.
 
-Para obtenção do valor de $k$, foi executada uma busca em \textit{grid} do hiper-parâmetro, variando seu valor entre 1 e 30. Utilizando os dados de teste, buscando suas classes por meio da inferência no conjunto de dados de treinamento, foi calculada a acurácia balanceada para cada número de vizinhos testado. A \autoref{fig:gridsearch} exibe a evolução da acurácia balanceada para os valores de $k$, e com isso, resulta-se que o valor ótimo para o classificador é $k = 8$.
+Para obtenção do valor de $k$, foi executada uma busca em \textit{grid} do hiper-parâmetro, variando seu valor entre 1 e 29. Utilizando da técnica de validação cruzada \textit{k-fold}, com quatro pastas, foi realizada a inferência das classes dos dados da pasta de validação com base nos vizinhos mais próximos encontrados nas pastas de treinamento, para cada valor de $k$ testado. A \autoref{fig:gridsearch} exibe à evolução da acurácia balanceada para os valores de $k$, obtendo um conjunto de valores ótimos em \eqref{eq:k_fold_k}.
+
+\begin{equation}\label{eq:k_fold_k}
+	k = [17\ 28\ 12\ 18]
+\end{equation}
 
 
 % TODO: \usepackage{graphicx} required
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.75\linewidth]{../../plot/knn_1/grid_search}
-	\caption{Busca em \textit{grid} do valor de $k$ ótimo.}
+	\includegraphics[width=0.75\linewidth]{../../plot/knn_1/grid_search_k_fold}
+	\caption{Busca em \textit{grid} do valor de $k$ ótimo utilizando \textit{4-fold validation}.}
 	\label{fig:gridsearch}
 \end{figure}
 
-Uma vez definido o classificador ótimo, obtém-se os indicadores de performance do classificador. A acurácia balanceada encontrada foi de 0,9028 e a matriz de confusão do classificador por ser vista na \autoref{tab:mc_knn_1}.
+A heurística escolhida para avaliar o melhor valor de $k$ com base no conjunto obtido por meio da busca em \textit{grid} com validação cruzada se dá em obter a acurácia balanceada média das pastas e obter o número de vizinhos que maximiza essa combinação das pastas. A \autoref{fig:gridsearch-k_optimal} mostra a progressão da acurácia balanceada média de acordo com $k$, e assim se obtém o valor de $k$ ótimo em $k = 15$.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.75\linewidth]{../../plot/knn_1/grid_search_k_fold-k_optimal}
+	\caption{Busca em \textit{grid} do valor de $k$ ótimo utilizando \textit{4-fold validation}.}
+	\label{fig:gridsearch-k_optimal}
+\end{figure}
+
+
+
+Uma vez definido o classificador ótimo, obtém-se os indicadores de performance do classificador com base nos dados de teste. A acurácia balanceada encontrada foi de 0,8991 e a matriz de confusão do classificador por ser vista na \autoref{tab:mc_knn_1}.
 
 \begin{equation}\label{eq:ba_knn_1}
-	BA = 0,9028
+	BA = 0,8991
 \end{equation}
 
 \begin{table}[H]
@@ -103,12 +118,12 @@ Uma vez definido o classificador ótimo, obtém-se os indicadores de performance
 	\begin{tabular}{c||c|c|c|c|c|c|}
 		\cline{2-7}
 		& \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \multicolumn{1}{l|}{\textbf{6}} \\ \hline \hline
-		\multicolumn{1}{|c||}{\textbf{1}} & 486        & 1          & 9          & 0          & 0          & 0                               \\ \hline
-		\multicolumn{1}{|c||}{\textbf{2}} & 42         & 426        & 3          & 0          & 0          & 0                               \\ \hline
-		\multicolumn{1}{|c||}{\textbf{3}} & 51         & 42         & 327        & 0          & 0          & 0                               \\ \hline
-		\multicolumn{1}{|c||}{\textbf{4}} & 0          & 4          & 0          & 420        & 67         & 0                               \\ \hline
-		\multicolumn{1}{|c||}{\textbf{5}} & 0          & 0          & 0          & 51         & 481        & 0                               \\ \hline
-		\multicolumn{1}{|c||}{\textbf{6}} & 0          & 0          & 0          & 2          & 1          & 534                             \\ \hline
+		\multicolumn{1}{|c||}{\textbf{1}} & 488 & 0   & 8   & 0   & 0   & 0   \\ \hline
+		\multicolumn{1}{|c||}{\textbf{2}} & 39  & 427 & 5   & 0   & 0   & 0   \\ \hline
+		\multicolumn{1}{|c||}{\textbf{3}} & 51  & 44  & 325 & 0   & 0   & 0   \\ \hline
+		\multicolumn{1}{|c||}{\textbf{4}} & 0   & 4   & 0   & 389 & 98  & 0   \\ \hline
+		\multicolumn{1}{|c||}{\textbf{5}} & 0   & 0   & 0   & 31  & 501 & 0   \\ \hline
+		\multicolumn{1}{|c||}{\textbf{6}} & 0   & 0   & 0   & 1   & 1   & 535 \\ \hline
 	\end{tabular}
 	\caption{Matriz de confusão do classificador k-NN com k = 8.}
 	\label{tab:mc_knn_1}
@@ -121,12 +136,12 @@ Extraindo da matriz de confusão as métricas de precisão e \textit{recall}, ob
 	\centering
 	\begin{tabular}{c|c|c}
 		\textbf{Classe} & \textbf{Precisão} & \textbf{\textit{Recall}} \\ \hline
-		\textbf{1}      & 0,9798            & 0,8394          \\
-		\textbf{2}      & 0,9045            & 0,9006          \\
-		\textbf{3}      & 0,7786            & 0,9646          \\
-		\textbf{4}      & 0,8554            & 0,8879          \\
-		\textbf{5}      & 0,9041            & 0,8761          \\
-		\textbf{6}      & 0,9944            & 1,0000         
+		\textbf{1}      & 0.9839 & 0.8443 \\
+		\textbf{2}      & 0.9066 & 0.8989 \\
+		\textbf{3}      & 0.7738 & 0.9615 \\
+		\textbf{4}      & 0.7923 & 0.9240 \\
+		\textbf{5}      & 0.9417 & 0.8350 \\
+		\textbf{6}      & 0.9963 & 1.0000
 	\end{tabular}
 	\caption{Precisão e \textit{Recall} do classificador por classe.}
 	\label{tab:pr_knn_1}
