--- a/2-Classification/docs/IA048-Atividade_Classificacao-Gabriel_Toffanetto/corpo.tex
+++ b/2-Classification/docs/IA048-Atividade_Classificacao-Gabriel_Toffanetto/corpo.tex
@@ -21,7 +21,7 @@ Devido a esse desbalanceamento, a métrica que será utilizada para a avaliaçã
 % TODO: \usepackage{graphicx} required
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.75\linewidth]{../../plot/Balancing_of_classes}
+	\includegraphics[width=0.6\linewidth]{../../plot/Balancing_of_classes}
 	\caption{Gráfico da ocorrência das classes nos conjuntos de dados de treinamento e teste.}
 	\label{fig:balancingofclasses}
 \end{figure}
@@ -33,26 +33,234 @@ Devido a esse desbalanceamento, a métrica que será utilizada para a avaliaçã
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\clearpage
 \section{Classificação via Regressão Logística}
 
+A classificação multi-classe é feita de forma elegante ao ter um modelo, que dadas $Q$ classes à serem reconhecidas, apresente $Q$ saídas, onde cada saída é a probabilidade da amostra pertencer à classe em questão. Tal implementação se dá por meio da função \textit{softmax}, enunciada em \eqref{eq:softmax}, e a saída é dada pela notação \textit{one-hot encoding}.
 
+\begin{equation}\label{eq:softmax}
+	\hat{y}_k (\+x(i)) = \frac{e^{\left(\+\Phi(\+x(i))^T\+w_k\right)}}{\sum_{j}e^{\left(\+\Phi(\+x(i))^T\+w_j\right)}}
+\end{equation}
 
+Onde o $\+w_k$ é o vetor de pesos para a classe $k$, e a matriz de pesos $\+W$ é dada por \eqref{eq:W}.
+
+\begin{equation}\label{eq:W}
+	\+W = \begin{bmatrix}
+		\+w_1 \\
+		\+w_2 \\
+		\vdots \\
+		\+w_Q
+	\end{bmatrix}
+\end{equation}
+
+Não existe forma fechada para a obtenção dos pesos de $\+W$, logo, o mesmo precisa ser feito de forma iterativa. A métrica utilizada como função de custo para o problema é a entropia cruzada, dada por \eqref{eq:JCE}. O otimização dos pesos se dá pela técnica do gradiente descendente, dado por \eqref{eq:dJCE}.
+
+\begin{equation}\label{eq:JCE}
+	J_{CE}(\+W) = -\sum_{i=0}^{N-1}\sum_{k=1}^{Q}y_{i,k}\log\left[\hat{y}_k(\+x(i)\right]
+\end{equation}
+
+\begin{equation}\label{eq:dJCE}
+	\nabla\+W = \frac{\partial J_{CE}(\+W)}{\partial \+w_k} = \sum_{i=0}^{N-1} \left(y_{i,k} - \hat{y}_k\left(\+x(i)\right)\right)\+\Phi(\+x(i))^T
+\end{equation}
+
+A atualização dos pesos é dada por \eqref{eq:wk1}, onde $l$ é a iteração dos pesos.
+
+\begin{equation}\label{eq:wk1}
+	\+W[l+1] = \+W[l] - \eta\nabla\+W
+\end{equation}
+
+Devido ao tamanho do conjunto de dados, foi proposto o treinamento por \textit{mini-batch}, testadas com tamanhos de 500, 1000 e 2000 amostras, e um passo ($\eta$) de 0,01, que apresentou boa convergência nos testes realizados \textit{a priori}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Dados tratados}
 
-\subsubsection{Estrutura de treinamento}
+\subsubsection*{\textit{Mini-batch} 500 amostras}
+
+% TODO: \usepackage{graphicx} required
+\begin{figure}[H]
+	\begin{subfigure}[H]{0.49\textwidth}
+		\centering
+		\includegraphics[width = 0.98\linewidth]{../../plot/LR_1/CE_500_epochs_batch_size500}
+		\label{fig:CE_500_epochs_batch_size500}
+		\caption{Evolução da entropia cruzada.}
+	\end{subfigure}
+	\begin{subfigure}[H]{0.49\textwidth}
+		\centering
+		\includegraphics[width = 0.99\linewidth]{../../plot/LR_1/BA_500_epochs_batch_size500}
+		\caption{Evolução da acurácia balanceada.}
+		\label{fig:BA_500_epochs_batch_size500}
+	\end{subfigure}
+	\caption{Evolução da entropia cruzada e da acurácia balanceada durante o treinamento para \textit{mini-batch} de 500 amostras e $\eta = 0,01$.}
+\end{figure}
+
+\begin{equation}\label{eq:ba_lr_500}
+	BA = 0,9162
+\end{equation}
+
+\begin{table}[H]
+	\centering
+\begin{tabular}{c||c|c|c|c|c|c|}
+	\cline{2-7}
+	& \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6} \\ \hline \hline
+	\multicolumn{1}{|c||}{\textbf{1}} & 486        & 0          & 10         & 0          & 0          & 0          \\ \hline
+	\multicolumn{1}{|c||}{\textbf{2}} & 30         & 440        & 1          & 0          & 0          & 0          \\ \hline
+	\multicolumn{1}{|c||}{\textbf{3}} & 39         & 52         & 329        & 0          & 0          & 0          \\ \hline
+	\multicolumn{1}{|c||}{\textbf{4}} & 0          & 3          & 0          & 424        & 64         & 0          \\ \hline
+	\multicolumn{1}{|c||}{\textbf{5}} & 1          & 0          & 0          & 33         & 498        & 0          \\ \hline
+	\multicolumn{1}{|c||}{\textbf{6}} & 0          & 0          & 0          & 0          & 0          & 537        \\ \hline
+\end{tabular}
+	\caption{Matriz de confusão do classificador k-NN com k = 8.}
+	\label{tab:mc_lr_500}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\begin{tabular}{c|c|c}
+		\textbf{Classe} & \textbf{Precisão} & \textit{\textbf{Recall}} \\ \hline
+		\textbf{1}      & 0.9798            & 0.8741                   \\
+		\textbf{2}      & 0.9342            & 0.8889                   \\
+		\textbf{3}      & 0.7833            & 0.9676                   \\
+		\textbf{4}      & 0.8635            & 0.9278                   \\
+		\textbf{5}      & 0.9361            & 0.8861                   \\
+		\textbf{6}      & 1.0000            & 1.0000                  
+	\end{tabular}
+	\caption{Precisão e \textit{Recall} do classificador por classe.}
+	\label{tab:pr_lr_500}
+\end{table}
+
+
+
+\subsubsection*{\textit{Mini-batch} 1000 amostras}
+
+% TODO: \usepackage{graphicx} required
+\begin{figure}[H]
+	\begin{subfigure}[H]{0.49\textwidth}
+		\centering
+		\includegraphics[width = 0.98\linewidth]{../../plot/LR_1/CE_500_epochs_batch_size1000}
+		\label{fig:CE_500_epochs_batch_size1000}
+		\caption{Evolução da entropia cruzada.}
+	\end{subfigure}
+	\begin{subfigure}[H]{0.49\textwidth}
+		\centering
+		\includegraphics[width = 0.99\linewidth]{../../plot/LR_1/BA_500_epochs_batch_size1000}
+		\caption{Evolução da acurácia balanceada.}
+		\label{fig:BA_500_epochs_batch_size1000}
+	\end{subfigure}
+	\caption{Evolução da entropia cruzada e da acurácia balanceada durante o treinamento para \textit{mini-batch} de 1000 amostras e $\eta = 0,01$.}
+\end{figure}
+
+\begin{equation}\label{eq:ba_lr_1000}
+BA = 0,9042
+\end{equation}
+
+\begin{table}[H]
+\centering
+\begin{tabular}{c||c|c|c|c|c|c|}
+	\cline{2-7}
+	& \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6} \\ \hline\hline
+	\multicolumn{1}{|c||}{\textbf{1}} & 486        & 0          & 10         & 0          & 0          & 0          \\ \hline
+	\multicolumn{1}{|c||}{\textbf{2}} & 28         & 443        & 0          & 0          & 0          & 0          \\ \hline
+	\multicolumn{1}{|c||}{\textbf{3}} & 56         & 53         & 311        & 0          & 0          & 0          \\ \hline
+	\multicolumn{1}{|c||}{\textbf{4}} & 0          & 3          & 0          & 426        & 61         & 1          \\ \hline
+	\multicolumn{1}{|c||}{\textbf{5}} & 0          & 1          & 0          & 54         & 477        & 0          \\ \hline
+	\multicolumn{1}{|c||}{\textbf{6}} & 0          & 0          & 0          & 0          & 0          & 537        \\ \hline
+\end{tabular}
+\caption{Matriz de confusão do classificador k-NN com k = 8.}
+\label{tab:mc_lr_1000}
+\end{table}
+
+\begin{table}[H]
+\centering
+\begin{tabular}{c|c|c}
+	\textbf{Classe} & \textbf{Precisão} & \textit{\textbf{Recall}} \\ \hline
+	\textbf{1}      & 0.9798            & 0.8526                   \\
+	\textbf{2}      & 0.9406            & 0.8860                   \\
+	\textbf{3}      & 0.7405            & 0.9688                   \\
+	\textbf{4}      & 0.8676            & 0.8875                   \\
+	\textbf{5}      & 0.8966            & 0.8866                   \\
+	\textbf{6}      & 1.0000            & 0.9981                  
+\end{tabular}
+\caption{Precisão e \textit{Recall} do classificador por classe.}
+\label{tab:pr_lr_1000}
+\end{table}
 
 
 
 
 
-\subsubsection{Passo de evolução}
 
 
+\subsubsection*{\textit{Mini-batch} 2000 amostras}
 
+% TODO: \usepackage{graphicx} required
+\begin{figure}[H]
+	\begin{subfigure}[H]{0.49\textwidth}
+		\centering
+		\includegraphics[width = 0.98\linewidth]{../../plot/LR_1/CE_500_epochs_batch_size2000}
+		\label{fig:CE_500_epochs_batch_size2000}
+		\caption{Evolução da entropia cruzada.}
+	\end{subfigure}
+	\begin{subfigure}[H]{0.49\textwidth}
+		\centering
+		\includegraphics[width = 0.99\linewidth]{../../plot/LR_1/BA_500_epochs_batch_size2000}
+		\caption{Evolução da acurácia balanceada.}
+		\label{fig:BA_500_epochs_batch_size2000}
+	\end{subfigure}
+	\caption{Evolução da entropia cruzada e da acurácia balanceada durante o treinamento para \textit{mini-batch} de 2000 amostras e $\eta = 0,01$.}
+\end{figure}
 
+\begin{equation}\label{eq:ba_lr_2000}
+BA = 0,8898
+\end{equation}
+
+\begin{table}[H]
+\centering
+\begin{tabular}{c|c|c|c|c|c|c|}
+	\cline{2-7}
+	& \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6} \\ \hline\hline
+	\multicolumn{1}{|c||}{\textbf{1}} & 489        & 0          & 7          & 0          & 0          & 0          \\ \hline
+	\multicolumn{1}{|c||}{\textbf{2}} & 27         & 444        & 0          & 0          & 0          & 0          \\ \hline
+	\multicolumn{1}{|c||}{\textbf{3}} & 70         & 49         & 301        & 0          & 0          & 0          \\ \hline
+	\multicolumn{1}{|c||}{\textbf{4}} & 0          & 3          & 0          & 396        & 91         & 1          \\ \hline
+	\multicolumn{1}{|c||}{\textbf{5}} & 1          & 1          & 0          & 58         & 472        & 0          \\ \hline
+	\multicolumn{1}{|c||}{\textbf{6}} & 0          & 0          & 0          & 0          & 0          & 537        \\ \hline
+\end{tabular}
+\caption{Matriz de confusão do classificador k-NN com k = 8.}
+\label{tab:mc_lr_2000}
+\end{table}
+
+\begin{table}[H]
+\centering
+\begin{tabular}{c|c|c}
+	\textbf{Classe} & \textbf{Precisão} & \textit{\textbf{Recall}} \\ \hline
+	\textbf{1}      & 0.9859            & 0.8330                   \\
+	\textbf{2}      & 0.9427            & 0.8934                   \\
+	\textbf{3}      & 0.7167            & 0.9773                   \\
+	\textbf{4}      & 0.8065            & 0.8722                   \\
+	\textbf{5}      & 0.8872            & 0.8384                   \\
+	\textbf{6}      & 1.0000            & 0.9981                  
+\end{tabular}
+\caption{Precisão e \textit{Recall} do classificador por classe.}
+\label{tab:pr_lr_2000}
+\end{table}
+
+\subsubsection*{Análise}
+
+\begin{figure}[H]
+	\begin{subfigure}[H]{0.49\textwidth}
+		\centering
+		\includegraphics[width = 0.98\linewidth]{../../plot/LR_1/CE_1000_epochs_batch_size500}
+		\label{fig:CE_1000_epochs_batch_size500}
+		\caption{Evolução da entropia cruzada.}
+	\end{subfigure}
+	\begin{subfigure}[H]{0.49\textwidth}
+		\centering
+		\includegraphics[width = 0.99\linewidth]{../../plot/LR_1/BA_1000_epochs_batch_size500}
+		\caption{Evolução da acurácia balanceada.}
+		\label{fig:BA_1000_epochs_batch_size500}
+	\end{subfigure}
+	\caption{Entropia cruzada e acurácia balanceada para o treinamento do modelo com \textit{mini-batch} de 500 amostras por 1000 épocas.}
+\end{figure}
 
 
 
@@ -68,7 +276,7 @@ Devido a esse desbalanceamento, a métrica que será utilizada para a avaliaçã
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\clearpage
 \section{Classificação via \textit{k neareast neighbours}}
 
 A classificação pelo método \textit{k neareast neighbours} é baseada em inferir a classe do dado a ser classificado com base nos $k$ dados mais próximos à ele. Como hiper-parâmetros para esse problema, têm-se principalmente o valor de $k$, a ordem $p$ da distância de Minkowski entre os dados e o critério de classificação.
@@ -147,11 +355,21 @@ Extraindo da matriz de confusão as métricas de precisão e \textit{recall}, ob
 	\label{tab:pr_knn_1}
 \end{table}
 
+\subsubsection*{Comparação com a regressão logística}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Dados brutos}
 
 
 
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Comparação entre os classificadores}
+
+\subsection{Dados tratados}
 
 
