--- a/2-Classification/src/logistic_regression_part_1.ipynb
+++ b/2-Classification/src/logistic_regression_part_1.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/toffanetto/.local/lib/python3.10/site-packages/matplotlib/projections/__init__.py:63: UserWarning: Unable to import Axes3D. This may be due to multiple versions of Matplotlib being installed (e.g. as a system package and as a pip package). As a result, the 3D projection is not available.\n",
+      "  warnings.warn(\"Unable to import Axes3D. This may be due to multiple versions of \"\n"
+     ]
+    }
+   ],
    "source": [
     "# @toffanetto\n",
     "import numpy as np\n",
@@ -14,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,14 +98,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix: \n",
+      "[[484.   0.  12.   0.   0.   0.]\n",
+      " [ 26. 444.   1.   0.   0.   0.]\n",
+      " [ 31.  48. 341.   0.   0.   0.]\n",
+      " [  0.   2.   0. 427.  62.   0.]\n",
+      " [  0.   0.   0.  29. 503.   0.]\n",
+      " [  0.   0.   0.   0.   0. 537.]]\n",
+      "\n",
+      "BA = 0.9242548103964365\n",
+      "\n",
+      "1\t0.9758\t0.8946\n",
+      "2\t0.9427\t0.8988\n",
+      "3\t0.8119\t0.9633\n",
+      "4\t0.8697\t0.9364\n",
+      "5\t0.9455\t0.8903\n",
+      "6\t1.0000\t1.0000\n"
+     ]
+    }
+   ],
    "source": [
     "# Testing\n",
     "\n",
-    "EPOCHS = 500\n",
-    "BATCH = 1000 # 0 for batch or type mini-batch size\n",
+    "EPOCHS = 1000\n",
+    "BATCH = 500 # 0 for batch or type mini-batch size\n",
     "\n",
     "W = np.load('../model/W_'+str(EPOCHS)+'_epochs_batch_size'+str(BATCH)+'.npy')\n",
     "\n",
