--- a/2-Classification/src/knn_part_1.ipynb
+++ b/2-Classification/src/knn_part_1.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "#k, ba = knn.findBestK(x=X_test,Y=Y_data,y_label=y_test,classes_rate=classes_rate_test)\n",
+    "k, ba = knn.findBestK(x=X_test,Y=Y_data,y_label=y_test,classes_rate=classes_rate_test)\n",
     "\n",
     "n = np.linspace(0,29,30)\n",
     "\n",
@@ -269,7 +269,11 @@
     "plt.savefig('../plot/knn_1/grid_search.pdf', format=\"pdf\", bbox_inches=\"tight\")\n",
     "\n",
     "print(k)\n",
-    "print(max(ba))"
+    "print(max(ba))\n",
+    "\n",
+    "\n",
+    "np.save('../model/knn/processed_data/k_optimal_test.npy', k)\n",
+    "np.save('../model/knn/processed_data/ba_optimal_test.npy', ba)"
    ]
   }
  ],
