--- a/2-Classification/src/logistic_regression_part_1.ipynb
+++ b/2-Classification/src/logistic_regression_part_1.ipynb
@@ -28,10 +28,10 @@
    "outputs": [],
    "source": [
     "# Getting train data\n",
-    "X_train, y_train, classes_rate_train = cl.getData(train=True, raw= False)\n",
+    "X_train, y_train, classes_rate_train = cl.getData(train=True, raw=False)\n",
     "\n",
     "# Getting test data\n",
-    "X_test, y_test, classes_rate_test = cl.getData(train=False, raw= False)"
+    "X_test, y_test, classes_rate_test = cl.getData(train=False, raw=False)"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('../model/W_'+str(EPOCHS)+'_epochs_batch_size'+str(BATCH)+'.npy', W)"
+    "np.save('../model/LR/processed/W_'+str(EPOCHS)+'_epochs_batch_size'+str(BATCH)+'.npy', W)"
    ]
   },
   {
@@ -130,7 +130,7 @@
     "EPOCHS = 1000\n",
     "BATCH = 500 # 0 for batch or type mini-batch size\n",
     "\n",
-    "W = np.load('../model/W_'+str(EPOCHS)+'_epochs_batch_size'+str(BATCH)+'.npy')\n",
+    "W = np.load('../model/LR/processed/W_'+str(EPOCHS)+'_epochs_batch_size'+str(BATCH)+'.npy')\n",
     "\n",
     "y_test_hat, class_y_hat = cl.classify(x=X_test,W=W)\n",
     "\n",
